--- a/projects/blog_challenge/package.json
+++ b/projects/blog_challenge/package.json
@@ -15,6 +15,7 @@
     "ejs": "^2.6.1",
     "express": "^4.16.3",
     "lodash": "^4.17.15",
+    "lorem-ipsum": "^2.0.3",
     "md5": "^2.2.1",
     "path": "^0.12.7",
     "request": "^2.88.2"
