--- a/projects/blog_challenge_mongo/package.json
+++ b/projects/blog_challenge_mongo/package.json
@@ -17,6 +17,7 @@
     "lodash": "^4.17.15",
     "lorem-ipsum": "^2.0.3",
     "md5": "^2.2.1",
+    "mongoose": "^5.9.16",
     "path": "^0.12.7",
     "request": "^2.88.2"
   }
