--- a/projects/secrets_auth/package.json
+++ b/projects/secrets_auth/package.json
@@ -11,11 +11,13 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.19.0",
+    "dateformat": "^3.0.3",
     "dotenv": "^8.2.0",
     "ejs": "^3.1.2",
     "express": "^4.17.1",
     "lodash": "^4.17.15",
     "md5": "^2.2.1",
+    "mongoose": "^5.9.16",
     "path": "^0.12.7",
     "request": "^2.88.2"
   }
