--- a/projects/secrets_auth/package.json
+++ b/projects/secrets_auth/package.json
@@ -18,6 +18,7 @@
     "lodash": "^4.17.15",
     "md5": "^2.2.1",
     "mongoose": "^5.9.16",
+    "mongoose-encryption": "^2.0.2",
     "path": "^0.12.7",
     "request": "^2.88.2"
   }
