--- a/projects/secrets_auth/package.json
+++ b/projects/secrets_auth/package.json
@@ -10,12 +10,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^4.0.1",
     "body-parser": "^1.19.0",
     "dateformat": "^3.0.3",
     "dotenv": "^8.2.0",
     "ejs": "^3.1.2",
     "express": "^4.17.1",
-    "md5": "^2.2.1",
     "mongoose": "^5.9.16"
   }
 }
