--- a/projects/secrets_auth/package.json
+++ b/projects/secrets_auth/package.json
@@ -20,6 +20,7 @@
     "mongoose": "^5.9.16",
     "mongoose-findorcreate": "^3.0.0",
     "passport": "^0.4.1",
+    "passport-facebook": "^3.0.0",
     "passport-google-oauth20": "^2.0.0",
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^6.0.1"
