--- a/projects/keeper_react/package.json
+++ b/projects/keeper_react/package.json
@@ -1,10 +1,12 @@
 {
-  "name": "keeper-app-part-1-starting",
+  "name": "using-pre-built-react-components-6vvz5",
   "version": "1.0.0",
   "description": "",
   "keywords": [],
   "main": "src/index.js",
   "dependencies": {
+    "@material-ui/core": "4.10.1",
+    "@material-ui/icons": "4.9.1",
     "react": "16.8.6",
     "react-dom": "16.8.6",
     "react-scripts": "3.2.0"
