--- a/projects/keeper_react/package.json
+++ b/projects/keeper_react/package.json
@@ -7,6 +7,20 @@
   "dependencies": {
     "@material-ui/core": "4.10.1",
     "@material-ui/icons": "4.9.1",
+    "body-parser": "^1.19.0",
+    "dateformat": "^3.0.3",
+    "dotenv": "^8.2.0",
+    "ejs": "^3.1.3",
+    "express": "^4.17.1",
+    "express-sessions": "^1.0.6",
+    "inherits": "^2.0.4",
+    "mongoose": "^5.9.17",
+    "mongoose-findorcreate": "^3.0.0",
+    "passport": "^0.4.1",
+    "passport-facebook": "^3.0.0",
+    "passport-google-oauth20": "^2.0.0",
+    "passport-local": "^1.0.0",
+    "passport-local-mongoose": "^6.0.1",
     "react": "16.8.6",
     "react-dom": "16.8.6",
     "react-scripts": "3.2.0"
