remove yarn.lock to try to get heroku errors to go away

--- a/projects/keeper_react_node/package.json
+++ b/projects/keeper_react_node/package.json
@@ -31,7 +31,7 @@
   },
   "scripts": {
     "start": "node server.js",
-    "_start": "react-scripts start",
+    "__start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
