--- a/projects/keeper_react_node/public/manifest.json
+++ b/projects/keeper_react_node/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "Keeper",
+  "name": "Private notes Keeper",
   "icons": [
     {
       "src": "favicon.ico",
